[gd_scene load_steps=7 format=3 uid="uid://dxtsd76mfiwdo"]

[ext_resource type="Script" path="res://addons/virtual_camera_2d/scripts/virtual_camera_2d.gd" id="1_clpnm"]
[ext_resource type="Script" path="res://example/scenes/example_scene.gd" id="1_krwvl"]
[ext_resource type="TileSet" uid="uid://jt3vijc7gast" path="res://example/resources/tile_set.tres" id="1_oofjx"]
[ext_resource type="Script" path="res://addons/virtual_camera_2d/scripts/cinematic_camera_2d.gd" id="2_j4hdc"]
[ext_resource type="PackedScene" uid="uid://dn15b4dlprkhf" path="res://example/scenes/test_player.tscn" id="4_go1hk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsieq"]
size = Vector2(32, 2)

[node name="ExampleScene" type="Node2D"]
script = ExtResource("1_krwvl")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("1_oofjx")
format = 2
layer_0/tile_data = PackedInt32Array(262148, 65536, 2, 327684, 65536, 2, 393220, 65536, 2, 458756, 65536, 2, 524292, 65536, 2, 589828, 65536, 2, 655364, 65536, 2, 720900, 65536, 2, 262149, 65536, 2, 327685, 65536, 2, 393221, 65536, 2, 458757, 65536, 2, 524293, 65536, 2, 589829, 65536, 2, 655365, 65536, 2, 720901, 65536, 2, 262150, 65536, 2, 327686, 65536, 2, 393222, 65536, 2, 458758, 65536, 2, 524294, 65536, 2, 589830, 65536, 2, 655366, 65536, 2, 720902, 65536, 2, 262151, 65536, 2, 327687, 65536, 2, 393223, 65536, 2, 458759, 65536, 2, 524295, 65536, 2, 589831, 65536, 2, 655367, 65536, 2, 720903, 65536, 2, 262152, 65536, 2, 327688, 65536, 2, 393224, 65536, 2, 458760, 65536, 2, 524296, 65536, 2, 589832, 65536, 2, 655368, 65536, 2, 720904, 65536, 2, 262153, 65536, 2, 327689, 65536, 2, 393225, 65536, 2, 458761, 65536, 2, 524297, 65536, 2, 589833, 65536, 2, 655369, 65536, 2, 720905, 65536, 2, 7, 65536, 2, 65543, 65536, 2, 131079, 65536, 2, 196615, 65536, 2, 8, 65536, 2, 65544, 65536, 2, 131080, 65536, 2, 196616, 65536, 2, -524284, 65536, 2, -458748, 65536, 2, -393212, 65536, 2, -327676, 65536, 2, -262140, 65536, 2, -196604, 65536, 2, -131068, 65536, 2, -65532, 65536, 2, -524283, 65536, 2, -458747, 65536, 2, -393211, 65536, 2, -327675, 65536, 2, -262139, 65536, 2, -196603, 65536, 2, -131067, 65536, 2, -65531, 65536, 2, -524282, 65536, 2, -458746, 65536, 2, -393210, 65536, 2, -327674, 65536, 2, -262138, 65536, 2, -196602, 65536, 2, -131066, 65536, 2, -65530, 65536, 2, -524281, 65536, 2, -458745, 65536, 2, -393209, 65536, 2, -327673, 65536, 2, -262137, 65536, 2, -196601, 65536, 2, -131065, 65536, 2, -65529, 65536, 2, -524280, 65536, 2, -458744, 65536, 2, -393208, 65536, 2, -327672, 65536, 2, -262136, 65536, 2, -196600, 65536, 2, -131064, 65536, 2, -65528, 65536, 2, -524279, 65536, 2, -458743, 65536, 2, -393207, 65536, 2, -327671, 65536, 2, -262135, 65536, 2, -196599, 65536, 2, -131063, 65536, 2, -65527, 65536, 2, 196614, 262144, 2, 196617, 131072, 2, 196612, 196608, 2, 196613, 196608, 2, 6, 262144, 0, 9, 131072, 0, 65545, 131072, 1, 131081, 131072, 1, -589820, 196608, 2, -589819, 196608, 2, -589818, 196608, 2, -589817, 196608, 2, -589816, 196608, 2, -589815, 196608, 2, -524285, 262144, 1, -458749, 262144, 1, -393213, 262144, 1, -589821, 0, 0, -327677, 262144, 1, -262141, 262144, 1, -196605, 262144, 1, -131069, 262144, 1, -65533, 262144, 1, 4, 196608, 0, 5, 196608, 0, 3, 0, 1, 196611, 0, 0, 65542, 262144, 1, 131078, 262144, 1, 262147, 262144, 1, 327683, 262144, 1, 393219, 262144, 1, 458755, 262144, 1, 524291, 262144, 1, 589827, 262144, 1, 655363, 262144, 1, 720899, 262144, 1, 786436, 196608, 0, 786437, 196608, 0, 786438, 196608, 0, 786439, 196608, 0, 786440, 196608, 0, 786441, 196608, 0, 786435, 0, 1, 0, 196608, 1, 1, 196608, 1, 2, 196608, 1, 65536, 196608, 1, 131072, 196608, 1, 65537, 196608, 1, 131073, 196608, 1, 65538, 196608, 1, 131074, 196608, 1, 65539, 196608, 1, 131075, 196608, 1, 65540, 196608, 1, 131076, 196608, 1, 65541, 196608, 1, 131077, 196608, 1, 196608, 196608, 1, 262144, 196608, 1, 327680, 196608, 1, 393216, 196608, 1, 458752, 196608, 1, 524288, 196608, 1, 589824, 196608, 1, 655360, 196608, 1, 720896, 196608, 1, 786432, 196608, 1, 196609, 196608, 1, 262145, 196608, 1, 327681, 196608, 1, 393217, 196608, 1, 458753, 196608, 1, 524289, 196608, 1, 589825, 196608, 1, 655361, 196608, 1, 720897, 196608, 1, 786433, 196608, 1, 196610, 196608, 1, 262146, 196608, 1, 327682, 196608, 1, 393218, 196608, 1, 458754, 196608, 1, 524290, 196608, 1, 589826, 196608, 1, 655362, 196608, 1, 720898, 196608, 1, 786434, 196608, 1, 851968, 196608, 1, 917504, 196608, 1, 983040, 196608, 1, 851969, 196608, 1, 917505, 196608, 1, 983041, 196608, 1, 851970, 196608, 1, 917506, 196608, 1, 983042, 196608, 1, 851971, 196608, 1, 917507, 196608, 1, 983043, 196608, 1, 851972, 196608, 1, 917508, 196608, 1, 983044, 196608, 1, 851973, 196608, 1, 917509, 196608, 1, 983045, 196608, 1, 851974, 196608, 1, 917510, 196608, 1, 983046, 196608, 1, 851975, 196608, 1, 917511, 196608, 1, 983047, 196608, 1, 851976, 196608, 1, 917512, 196608, 1, 983048, 196608, 1, 851977, 196608, 1, 917513, 196608, 1, 983049, 196608, 1, -786432, 196608, 1, -720896, 196608, 1, -786431, 196608, 1, -720895, 196608, 1, -786430, 196608, 1, -720894, 196608, 1, -786429, 196608, 1, -720893, 196608, 1, -786428, 196608, 1, -720892, 196608, 1, -786427, 196608, 1, -720891, 196608, 1, -786426, 196608, 1, -720890, 196608, 1, -786425, 196608, 1, -720889, 196608, 1, -786424, 196608, 1, -720888, 196608, 1, -786423, 196608, 1, -720887, 196608, 1, -655360, 196608, 1, -655359, 196608, 1, -655358, 196608, 1, -655357, 196608, 1, -655356, 196608, 1, -655355, 196608, 1, -655354, 196608, 1, -655353, 196608, 1, -655352, 196608, 1, -655351, 196608, 1, -589824, 196608, 1, -524288, 196608, 1, -458752, 196608, 1, -393216, 196608, 1, -327680, 196608, 1, -262144, 196608, 1, -196608, 196608, 1, -131072, 196608, 1, -65536, 196608, 1, -589823, 196608, 1, -524287, 196608, 1, -458751, 196608, 1, -393215, 196608, 1, -327679, 196608, 1, -262143, 196608, 1, -196607, 196608, 1, -131071, 196608, 1, -65535, 196608, 1, -589822, 196608, 1, -524286, 196608, 1, -458750, 196608, 1, -393214, 196608, 1, -327678, 196608, 1, -262142, 196608, 1, -196606, 196608, 1, -131070, 196608, 1, -65534, 196608, 1, -786412, 196608, 1, -720876, 196608, 1, -655340, 196608, 1, -589804, 196608, 2, -524268, 65536, 2, -458732, 65536, 2, -393196, 65536, 2, -327660, 65536, 2, -262124, 65536, 2, -196588, 65536, 2, -131052, 65536, 2, -65516, 65536, 2, 20, 196608, 0, 65556, 196608, 1, 131092, 196608, 1, 196628, 196608, 2, 262164, 65536, 2, 327700, 65536, 2, 393236, 65536, 2, 458772, 65536, 2, 524308, 65536, 2, 589844, 65536, 2, 655380, 65536, 2, 720916, 65536, 2, 786452, 196608, 0, 851988, 196608, 1, 917524, 196608, 1, 983060, 196608, 1, -786411, 196608, 1, -720875, 196608, 1, -655339, 196608, 1, -589803, 196608, 2, -524267, 65536, 2, -458731, 65536, 2, -393195, 65536, 2, -327659, 65536, 2, -262123, 65536, 2, -196587, 65536, 2, -131051, 65536, 2, -65515, 65536, 2, 21, 196608, 0, 65557, 196608, 1, 131093, 196608, 1, 196629, 196608, 2, 262165, 65536, 2, 327701, 65536, 2, 393237, 65536, 2, 458773, 65536, 2, 524309, 65536, 2, 589845, 65536, 2, 655381, 65536, 2, 720917, 65536, 2, 786453, 196608, 0, 851989, 196608, 1, 917525, 196608, 1, 983061, 196608, 1, -786410, 196608, 1, -720874, 196608, 1, -655338, 196608, 1, -589802, 65536, 0, -524266, 131072, 1, -458730, 131072, 1, -393194, 131072, 1, -327658, 131072, 1, -262122, 131072, 1, -196586, 131072, 1, -131050, 131072, 1, -65514, 131072, 1, 22, 65536, 1, 65558, 196608, 1, 131094, 196608, 1, 196630, 65536, 0, 262166, 131072, 1, 327702, 131072, 1, 393238, 131072, 1, 458774, 131072, 1, 524310, 131072, 1, 589846, 131072, 1, 655382, 131072, 1, 720918, 131072, 1, 786454, 65536, 1, 851990, 196608, 1, 917526, 196608, 1, 983062, 196608, 1, -786409, 196608, 1, -720873, 196608, 1, -655337, 196608, 1, -589801, 196608, 1, -524265, 196608, 1, -458729, 196608, 1, -393193, 196608, 1, -327657, 196608, 1, -262121, 196608, 1, -196585, 196608, 1, -131049, 196608, 1, -65513, 196608, 1, 23, 196608, 1, 65559, 196608, 1, 131095, 196608, 1, 196631, 196608, 1, 262167, 196608, 1, 327703, 196608, 1, 393239, 196608, 1, 458775, 196608, 1, 524311, 196608, 1, 589847, 196608, 1, 655383, 196608, 1, 720919, 196608, 1, 786455, 196608, 1, 851991, 196608, 1, 917527, 196608, 1, 983063, 196608, 1, -786408, 196608, 1, -720872, 196608, 1, -655336, 196608, 1, -589800, 196608, 1, -524264, 196608, 1, -458728, 196608, 1, -393192, 196608, 1, -327656, 196608, 1, -262120, 196608, 1, -196584, 196608, 1, -131048, 196608, 1, -65512, 196608, 1, 24, 196608, 1, 65560, 196608, 1, 131096, 196608, 1, 196632, 196608, 1, 262168, 196608, 1, 327704, 196608, 1, 393240, 196608, 1, 458776, 196608, 1, 524312, 196608, 1, 589848, 196608, 1, 655384, 196608, 1, 720920, 196608, 1, 786456, 196608, 1, 851992, 196608, 1, 917528, 196608, 1, 983064, 196608, 1, -786407, 196608, 1, -720871, 196608, 1, -655335, 196608, 1, -589799, 196608, 1, -524263, 196608, 1, -458727, 196608, 1, -393191, 196608, 1, -327655, 196608, 1, -262119, 196608, 1, -196583, 196608, 1, -131047, 196608, 1, -65511, 196608, 1, 25, 196608, 1, 65561, 196608, 1, 131097, 196608, 1, 196633, 196608, 1, 262169, 196608, 1, 327705, 196608, 1, 393241, 196608, 1, 458777, 196608, 1, 524313, 196608, 1, 589849, 196608, 1, 655385, 196608, 1, 720921, 196608, 1, 786457, 196608, 1, 851993, 196608, 1, 917529, 196608, 1, 983065, 196608, 1, -786414, 196608, 1, -720878, 196608, 1, -655342, 196608, 1, -589806, 196608, 2, -524270, 65536, 2, -458734, 65536, 2, -393198, 65536, 2, -327662, 65536, 2, -262126, 65536, 2, -196590, 65536, 2, -131054, 65536, 2, -65518, 65536, 2, 18, 196608, 0, 65554, 196608, 1, 131090, 196608, 1, 196626, 196608, 2, 262162, 65536, 2, 327698, 65536, 2, 393234, 65536, 2, 458770, 65536, 2, 524306, 65536, 2, 589842, 65536, 2, 655378, 65536, 2, 720914, 65536, 2, 786450, 196608, 0, 851986, 196608, 1, 917522, 196608, 1, 983058, 196608, 1, -786413, 196608, 1, -720877, 196608, 1, -655341, 196608, 1, -589805, 196608, 2, -524269, 65536, 2, -458733, 65536, 2, -393197, 65536, 2, -327661, 65536, 2, -262125, 65536, 2, -196589, 65536, 2, -131053, 65536, 2, -65517, 65536, 2, 19, 196608, 0, 65555, 196608, 1, 131091, 196608, 1, 196627, 196608, 2, 262163, 65536, 2, 327699, 65536, 2, 393235, 65536, 2, 458771, 65536, 2, 524307, 65536, 2, 589843, 65536, 2, 655379, 65536, 2, 720915, 65536, 2, 786451, 196608, 0, 851987, 196608, 1, 917523, 196608, 1, 983059, 196608, 1, -786416, 196608, 1, -720880, 196608, 1, -655344, 196608, 1, -589808, 196608, 2, -524272, 65536, 2, -458736, 65536, 2, -393200, 65536, 2, -327664, 65536, 2, -262128, 65536, 2, -196592, 65536, 2, -131056, 65536, 2, -65520, 65536, 2, 16, 196608, 0, 65552, 196608, 1, 131088, 196608, 1, 196624, 196608, 2, 262160, 65536, 2, 327696, 65536, 2, 393232, 65536, 2, 458768, 65536, 2, 524304, 65536, 2, 589840, 65536, 2, 655376, 65536, 2, 720912, 65536, 2, 786448, 196608, 0, 851984, 196608, 1, 917520, 196608, 1, 983056, 196608, 1, -786415, 196608, 1, -720879, 196608, 1, -655343, 196608, 1, -589807, 196608, 2, -524271, 65536, 2, -458735, 65536, 2, -393199, 65536, 2, -327663, 65536, 2, -262127, 65536, 2, -196591, 65536, 2, -131055, 65536, 2, -65519, 65536, 2, 17, 196608, 0, 65553, 196608, 1, 131089, 196608, 1, 196625, 196608, 2, 262161, 65536, 2, 327697, 65536, 2, 393233, 65536, 2, 458769, 65536, 2, 524305, 65536, 2, 589841, 65536, 2, 655377, 65536, 2, 720913, 65536, 2, 786449, 196608, 0, 851985, 196608, 1, 917521, 196608, 1, 983057, 196608, 1, -786418, 196608, 1, -720882, 196608, 1, -655346, 196608, 1, -589810, 196608, 2, -524274, 65536, 2, -458738, 65536, 2, -393202, 65536, 2, -327666, 65536, 2, -262130, 65536, 2, -196594, 65536, 2, -131058, 65536, 2, -65522, 65536, 2, 14, 196608, 0, 65550, 196608, 1, 131086, 196608, 1, 196622, 196608, 2, 262158, 65536, 2, 327694, 65536, 2, 393230, 65536, 2, 458766, 65536, 2, 524302, 65536, 2, 589838, 65536, 2, 655374, 65536, 2, 720910, 65536, 2, 786446, 196608, 0, 851982, 196608, 1, 917518, 196608, 1, 983054, 196608, 1, -786417, 196608, 1, -720881, 196608, 1, -655345, 196608, 1, -589809, 196608, 2, -524273, 65536, 2, -458737, 65536, 2, -393201, 65536, 2, -327665, 65536, 2, -262129, 65536, 2, -196593, 65536, 2, -131057, 65536, 2, -65521, 65536, 2, 15, 196608, 0, 65551, 196608, 1, 131087, 196608, 1, 196623, 196608, 2, 262159, 65536, 2, 327695, 65536, 2, 393231, 65536, 2, 458767, 65536, 2, 524303, 65536, 2, 589839, 65536, 2, 655375, 65536, 2, 720911, 65536, 2, 786447, 196608, 0, 851983, 196608, 1, 917519, 196608, 1, 983055, 196608, 1, -786420, 196608, 1, -720884, 196608, 1, -655348, 196608, 1, -589812, 196608, 2, -524276, 65536, 2, -458740, 65536, 2, -393204, 65536, 2, -327668, 65536, 2, -262132, 65536, 2, -196596, 65536, 2, -131060, 65536, 2, -65524, 65536, 2, 12, 196608, 0, 65548, 196608, 1, 131084, 196608, 1, 196620, 196608, 2, 262156, 65536, 2, 327692, 65536, 2, 393228, 65536, 2, 458764, 65536, 2, 524300, 65536, 2, 589836, 65536, 2, 655372, 65536, 2, 720908, 65536, 2, 786444, 196608, 0, 851980, 196608, 1, 917516, 196608, 1, 983052, 196608, 1, -786419, 196608, 1, -720883, 196608, 1, -655347, 196608, 1, -589811, 196608, 2, -524275, 65536, 2, -458739, 65536, 2, -393203, 65536, 2, -327667, 65536, 2, -262131, 65536, 2, -196595, 65536, 2, -131059, 65536, 2, -65523, 65536, 2, 13, 196608, 0, 65549, 196608, 1, 131085, 196608, 1, 196621, 196608, 2, 262157, 65536, 2, 327693, 65536, 2, 393229, 65536, 2, 458765, 65536, 2, 524301, 65536, 2, 589837, 65536, 2, 655373, 65536, 2, 720909, 65536, 2, 786445, 196608, 0, 851981, 196608, 1, 917517, 196608, 1, 983053, 196608, 1, -786422, 196608, 1, -720886, 196608, 1, -655350, 196608, 1, -589814, 196608, 2, -524278, 65536, 2, -458742, 65536, 2, -393206, 65536, 2, -327670, 65536, 2, -262134, 65536, 2, -196598, 65536, 2, -131062, 65536, 2, -65526, 65536, 2, 10, 196608, 0, 65546, 196608, 1, 131082, 196608, 1, 196618, 196608, 2, 262154, 65536, 2, 327690, 65536, 2, 393226, 65536, 2, 458762, 65536, 2, 524298, 65536, 2, 589834, 65536, 2, 655370, 65536, 2, 720906, 65536, 2, 786442, 196608, 0, 851978, 196608, 1, 917514, 196608, 1, 983050, 196608, 1, -786421, 196608, 1, -720885, 196608, 1, -655349, 196608, 1, -589813, 196608, 2, -524277, 65536, 2, -458741, 65536, 2, -393205, 65536, 2, -327669, 65536, 2, -262133, 65536, 2, -196597, 65536, 2, -131061, 65536, 2, -65525, 65536, 2, 11, 196608, 0, 65547, 196608, 1, 131083, 196608, 1, 196619, 196608, 2, 262155, 65536, 2, 327691, 65536, 2, 393227, 65536, 2, 458763, 65536, 2, 524299, 65536, 2, 589835, 65536, 2, 655371, 65536, 2, 720907, 65536, 2, 786443, 196608, 0, 851979, 196608, 1, 917515, 196608, 1, 983051, 196608, 1)
metadata/_edit_lock_ = true

[node name="CinematicCamera" type="Camera2D" parent="." node_paths=PackedStringArray("follow_node", "virtual_camera")]
position = Vector2(256, 128)
process_callback = 0
position_smoothing_enabled = true
script = ExtResource("2_j4hdc")
follow_node = NodePath("../TestPlayer")
virtual_camera = NodePath("../VirtualCamera1")
transition_speed = 80.0

[node name="VirtualCamera1" type="Node2D" parent="."]
z_index = 99
script = ExtResource("1_clpnm")
limit_left = 0
limit_top = 32
limit_right = 416
limit_bottom = 256
metadata/_edit_lock_ = true

[node name="VirtualCamera2" type="Node2D" parent="."]
z_index = 99
script = ExtResource("1_clpnm")
limit_left = 0
limit_top = -192
limit_right = 416
limit_bottom = 32
metadata/_edit_lock_ = true

[node name="TestPlayer" parent="." instance=ExtResource("4_go1hk")]
position = Vector2(320, 128)

[node name="CameraTrigger" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape" type="CollisionShape2D" parent="CameraTrigger"]
position = Vector2(128, 32)
shape = SubResource("RectangleShape2D_rsieq")

[connection signal="body_exited" from="CameraTrigger" to="." method="_on_camera_trigger_body_exited"]
